# slovorez

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lexerrun.cc  main.py  pyproject.toml  sentencer.cc  strblock_test.py  text.txt  text_lexer.cc  text_lexer.h  utf8_decoder.h
data/dictionaries/static_dictionary/: remarks.md
data/ml/models/onnx/: resnet-deep-4b-ef-2048-80-0.4-tikh-synth.json  slovorez-test.json  slovorez-test.onnx  slovorez-v1.0.json  slovorez-v1.0.onnx
models/slovorez-test/: config.json
src/: main.py  slovorezCXX.pyi
src/slovorez/: __init__.py  slovorez.py  utils.py
src/slovorez/analytics/: morphemes.py
src/slovorez/core/: __init__.py  cache.py  cache_manager.py  cache_utils.py  engine.py  models.py  process.py  sentencer.py  tokenizer.py  wrapper.py
src/slovorez/core/vocab/: __init__.py  base.py  morpheme.py  pos.py
src/slovorez/io/: __init__.py  loaders.py
src/slovorez/ml/layers/: __init__.py  crf.py  rotary_position_embedding.py
src/slovorez/ml/layers/fusion/: feature_broadcast.py  gated_feature_fusion.py
tests/: test_backend.py
