[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slovorez"
version = "0.1.0"
dependencies = [
    "onnxruntime",
    "numpy>=1.20.0",
    "tqdm"
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12>=9.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]