[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slovorez"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.21.0"
]
cpu = [
    "onnxruntime>=1.21.0"
]

[tool.setuptools.packages.find]
where = ["src"]